input/2/devtest/src/objects/ABB_Expense__c.object
<CustomObject>
    <fields>
        <fullName>ABB_Project__c</fullName>
        <inlineHelpText>Referenced project</inlineHelpText>
        <label>ABB Project</label>
        <referenceTo>ABB_Project__c</referenceTo>
        <relationshipLabel>ABB Expenses</relationshipLabel>
        <relationshipName>ABB_Expenses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <formula>Quantity__c *  Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contact_Person__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Contact Person</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>ABB Expenses</relationshipLabel>
        <relationshipName>ABB_Expenses</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <inlineHelpText>Price of the expense</inlineHelpText>
        <label>Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>ABB Expense</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>ABB Expense Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ABB Expenses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>